--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -35,7 +35,7 @@ versions += [
   jopt: "5.0.3",
   junit: "4.12",
   lz4: "1.3.0",
-  metrics: "2.2.0",
+  metrics: "3.0.0",
   powermock: "1.6.4",
   reflections: "0.9.10",
   rocksDB: "4.11.2",
@@ -92,7 +92,7 @@ libs += [
   log4j: "log4j:log4j:$versions.log4j",
   joptSimple: "net.sf.jopt-simple:jopt-simple:$versions.jopt",
   lz4: "net.jpountz.lz4:lz4:$versions.lz4",
-  metrics: "com.yammer.metrics:metrics-core:$versions.metrics",
+  metrics: "com.codahale.metrics:metrics-core:$versions.metrics",
   powermock: "org.powermock:powermock-module-junit4:$versions.powermock",
   powermockEasymock: "org.powermock:powermock-api-easymock:$versions.powermock",
   reflections: "org.reflections:reflections:$versions.reflections",
